# sindri

./: .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  README.md  bun.lockb  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release-please.yml
core-extensions/: bundled-extensions.json
core-extensions/sindri-dark/: dark.json  manifest.json
core-extensions/sindri-file-icons/: icons.json  manifest.json
core-extensions/sindri-hello/: manifest.json  package.json
core-extensions/sindri-hello/src/: extension.ts
core-extensions/sindri-light/: light.json  manifest.json
core-extensions/sindri-ui-icons/: manifest.json  ui-pack.json
core-extensions/sindri-void/: manifest.json  void.json
docs/: development.md
docs/adr/: 0001-shell-tauri.md  0002-human-first-not-ai-native.md  0003-editor-surface-cm6-plus-webgl2.md  0004-frontend-solidjs.md  0005-builtin-ide-frameworks.md  0006-extension-api-from-day-one.md  0007-webgl2-not-webgpu.md  0008-workspace-model.md  0009-remote-execution-environments.md  0010-dockable-panel-layout.md  0011-inline-completion-and-suggestions.md  0012-project-file-format.md  0013-product-identity-and-polyglot-thesis.md  0014-sindri-adapter-protocol.md  0015-js-extension-host-runtime.md  0016-editor-buffer-and-tab-model.md  0017-browser-pwa-target.md  0018-split-panes-docking-floating.md  0019-theme-and-icon-system.md  0020-extension-distribution-and-marketplace.md  0021-settings-surface.md  0022-sidebar-panels-as-extensions.md  0023-extension-configuration-contract.md  0024-editor-decorations-api.md  0025-js-extension-host-deno-v8.md  0026-ui-panel-api.md  0027-exec-capability-security.md  0028-custom-editor-api.md  0029-editor-overlay-api.md  0030-extension-output-logging.md  0031-resource-url-scheme.md  0032-extension-templates-inheritance.md  0033-sindri-cli.md  0034-sindri-editor-namespace.md  0035-wasm-module-execution.md  0036-native-binary-bundling.md  0037-extension-inspector-debugging.md  0038-manifest-type-and-id-resolution.md  0039-project-license.md  0040-extension-api-version-gate.md  (+2 more)
docs/design/: roadmap.md  theming.md  vision.md
docs/examples/: sindri.toml
docs/process/: end-of-phase-review.md
docs/reviews/: README.md  phase-1-review.md  phase-2-review.md
scripts/: build-extension.ts  patch-theme-coverage.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: sindri-ext-aarch64-apple-darwin
src-tauri/crates/sindri-cli/: Cargo.toml
src-tauri/crates/sindri-cli/src/: doctor.rs  ext.rs  git.rs  main.rs
src-tauri/crates/sindri-cli/src/ext/: build.rs  gh.rs  mod.rs  version.rs  watch.rs
src-tauri/crates/sindri-core/: Cargo.toml
src-tauri/crates/sindri-core/src/: captures.rs  lib.rs  manifest.rs  pack.rs  paths.rs  semver.rs
src-tauri/icons/: icon.icns
src-tauri/src/: dev_cmds.rs  env.rs  ext_cmds.rs  inspector_gateway.rs  lib.rs  main.rs  resource.rs
src-tauri/src/exthost/: bootstrap.js  dispatch.rs  mod.rs  ops.rs  polyfills.rs  runtime.rs  runtime_tests.rs  source_map.rs  tests.rs
src-tauri/src/syntax/: grammars.rs  mod.rs  tests.rs  worker.rs
src-tauri/src/terminal/: mod.rs
src/__tests__/: host.test.ts  quick-pick-store.test.ts  syntax-utils.test.ts  tree-view-host.test.tsx
src/editor/: Editor.tsx  EditorArea.tsx  EditorGroup.tsx  TabBar.tsx  WebviewEditorHost.tsx  buffers.ts  custom-editor-registry.ts  custom-editor-store.ts  decoration-registry.ts  editor-state-bridge.ts  features.ts  groups.ts  indent-guides.ts  rainbow-brackets.ts  session.ts  syntax.ts  theme.ts
src/extensions/: activation.tsx  dev-watcher.ts  host.ts  manifest.ts  registry-client.ts  update-checker.ts
src/icons/: manifest.ts  svgs.ts  ui-icons.ts
src/lib/: tauri.ts
src/quick-pick/: QuickPickOverlay.tsx  store.ts
src/statusbar/: store.ts
src/styles/: _context-menu.scss  _editor.scss  _explorer.scss  _marketplace.scss  _popup.scss  _quick-pick.scss  _settings.scss  _shell.scss  _terminal.scss  _tokens.scss  _workbench.scss  index.scss
src/theme/: builtins.ts  compartment.ts  coverage.ts  current-theme.ts  registry.ts  tokens.ts
src/theme/themes/: sindri-dark.json  sindri-light.json  sindri-void.json
src/workbench/: ActivityBar.tsx  ContextMenu.tsx  DockBar.tsx  PopupPanel.tsx  Splitter.tsx  ThemeToggle.tsx  Workbench.tsx  activity-drag.ts  builtins.ts  layout.ts  panelHost.ts
src/workbench/panels/: ExtensionLogsPanel.tsx  FileExplorer.tsx  PlaceholderPanel.tsx  TerminalPanel.tsx  TreeViewHost.tsx  WebviewPanelHost.tsx  ext-logs-store.ts  terminal-themes.ts  webview-panel-store.ts
src/workbench/settings/: MarketplaceSection.tsx  SettingsModal.tsx  configStore.ts  store.ts
src/workbench/settings/marketplace/: ExtensionDetail.tsx  IconThemePreview.tsx  MarketplaceSection.tsx  ThemePreview.tsx  markdown.ts  store.ts
src/workbench/settings/sections/: ActiveExtensionSection.tsx  AppearanceSection.tsx  ExtensionPrefsSection.tsx  ExtensionReposSection.tsx  GeneralSection.tsx  LanguagePacksSection.tsx  SchemaSection.tsx  TerminalSection.tsx  primitives.tsx
src/workspace/: store.ts
