[package]
name = "sindri"
version = "0.0.0"
edition = "2021"
description = "A human-first, language-agnostic IDE."
authors = ["Sindri contributors"]
license = "MIT OR Apache-2.0"

[lib]
# `_lib` so the crate name doesn't collide with the binary on Windows.
name = "sindri_lib"
# cdylib removed: V8's prebuilt static library uses local-exec TLS (TPOFF32) which
# is incompatible with -shared on Linux. Desktop Tauri builds use rlib (linked into
# the binary). Mobile (Android/iOS) would need cdylib + a V8 build with different
# TLS model — that work is deferred until mobile targets are in scope (ADR-0025).
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Environment seam (ADR-0009): async from day one for IO-bound remote backends.
async-trait = "0.1"
tokio = { version = "1", features = ["fs", "process", "rt", "macros", "sync"] }
glob = "0.3"
thiserror = "2"
anyhow = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
# Deno/V8 extension host — ADR-0025. One JsRuntime per extension (uniform per-isolate).
# JsRuntime is !Send; each isolate lives on a dedicated std thread.
deno_core = "0.403"
deno_error = "0.7"
sourcemap = "9"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
