[package]
name = "sindri"
version = "1.0.0"
edition = "2021"
description = "A human-first, language-agnostic IDE."
authors = ["Sindri contributors"]
license = "MIT OR Apache-2.0"

# This package is BOTH the Tauri app and the Cargo workspace root (ADR-0033 §2).
# Keeping the app as the root package (not a virtual manifest) is what keeps the
# `tauri` CLI happy — `tauri dev`/`build` find their package + tauri.conf.json here.
[workspace]
members = ["crates/sindri-core", "crates/sindri-cli"]

# The app binary is renamed `sindri-app` so the CLI crate (crates/sindri-cli) can
# own the `sindri` binary name without a workspace-wide collision. Tauri operates
# on the *package* (`sindri`), not the binary name; `mainBinaryName` in
# tauri.conf.json pins the bundled-executable name to match (ADR-0033 §2).
[[bin]]
name = "sindri-app"
path = "src/main.rs"

[lib]
# `_lib` so the crate name doesn't collide with the binary on Windows.
name = "sindri_lib"
# cdylib removed: V8's prebuilt static library uses local-exec TLS (TPOFF32) which
# is incompatible with -shared on Linux. Desktop Tauri builds use rlib (linked into
# the binary). Mobile (Android/iOS) would need cdylib + a V8 build with different
# TLS model — that work is deferred until mobile targets are in scope (ADR-0025).
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sindri-core = { path = "crates/sindri-core" }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Environment seam (ADR-0009): async from day one for IO-bound remote backends.
async-trait = "0.1"
tokio = { version = "1", features = ["fs", "process", "rt", "macros", "sync"] }
glob = "0.3"
thiserror = "2"
anyhow = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
# Deno/V8 extension host — ADR-0025. One JsRuntime per extension (uniform per-isolate).
# JsRuntime is !Send; each isolate lives on a dedicated std thread.
deno_core = "0.403"
deno_error = "0.7"
sourcemap = "9"
# CDP gateway for V8 Inspector (ADR-0037, dev builds only)
tokio-tungstenite = { version = "0.24", default-features = false }
futures = "0.3"
# Tree-sitter syntax engine — ADR-0041. WASM grammars via wasmtime (wasm feature).
# Engine lives in the sindri app crate only; sindri-core stays wasmtime-free.
tree-sitter = { version = "0.26", features = ["wasm"] }
streaming-iterator = "0.1"
# PTY for the terminal panel (Phase 3). Uses OS PTY on Unix, ConPTY on Windows.
portable-pty = "0.9"
# System font enumeration for the terminal font picker (Phase 3).
font-kit = "0.14"

[dev-dependencies]
tempfile = "3"
# `test` feature gives the mock runtime used by the §3 path-parity test, which
# asserts sindri_core::app_data_dir() == app.path().app_data_dir() (ADR-0033 §3).
tauri = { version = "2", features = ["test"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
